--- a/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -95,12 +95,6 @@
     <Compile Include="Patient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReadWriteForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ReadWriteForm.Designer.cs">
-      <DependentUpon>ReadWriteForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="StringCipher.cs" />
     <Compile Include="textParser.cs" />
     <Compile Include="Visit.cs" />
@@ -131,12 +125,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ReadWriteForm.resx">
-      <DependentUpon>ReadWriteForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="VisitsScreen.resx">
       <DependentUpon>VisitsScreen.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
